--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,7 @@
                         <exclude>**/presentation/controller/GlobalExceptionHandler.class</exclude>
                         <exclude>**/domain/strategy/CreditStrategyFactory$StrategyType.class</exclude>
                         <exclude>**/domain/valueobject/CourseAverage$PerformanceLevel.class</exclude>
+                        <exclude>**/domain/constant/BusinessRules.class</exclude>
                     </excludes>
                 </configuration>
                 <executions>
