--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,22 @@ management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
 management.health.defaults.enabled=true
 
+# ===============================
+# OLLAMA / LANGCHAIN4J (AI Local)
+# ===============================
+# Configuração do Ollama rodando localmente com GPU AMD (ROCm)
+# Certifique-se de que: 1) Ollama está rodando (ollama serve)
+#                       2) Modelo foi baixado (ollama pull deepseek-coder:6.7b)
+
+# URL do servidor Ollama (padrão: localhost:11434)
+ollama.base-url=http://localhost:11434
+
+# Modelo a ser usado (opções: deepseek-coder:6.7b, llama3:8b, mistral:7b)
+ollama.model-name=deepseek-coder:6.7b
+
+# Timeout em segundos para respostas do LLM
+ollama.timeout-seconds=120
+
+# Temperatura (0.0 = determinístico, 1.0 = criativo)
+ollama.temperature=0.7
+
