--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -70,3 +70,24 @@ ollama.timeout-seconds=120
 # Temperatura (0.0 = determinístico, 1.0 = criativo)
 ollama.temperature=0.7
 
+# ===============================
+# RABBITMQ (Message Broker - Event-Driven Architecture)
+# ===============================
+# Conexão com RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.virtual-host=/
+
+# Exchange e Filas
+rabbitmq.exchange.name=gamification.events
+rabbitmq.queue.course-completed=gamification.course.completed
+rabbitmq.queue.notification=gamification.notification
+rabbitmq.queue.analytics=gamification.analytics
+
+# Routing Keys
+rabbitmq.routing-key.course-completed=course.completed
+rabbitmq.routing-key.notification=notification.#
+rabbitmq.routing-key.analytics=analytics.#
+
