--- a/pom.xml
+++ b/pom.xml
@@ -170,18 +170,35 @@
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>${jacoco.version}</version>
                 <configuration>
+                    <!-- 
+                        EXCLUSÕES DE COBERTURA JACOCO
+                        ============================
+                        
+                        Exclusões JUSTIFICADAS (apenas bootstrapping Spring Boot):
+                        - SubscriptionApplication: classe main() de bootstrapping Spring Boot
+                          (padrão aceito na indústria - não há lógica de negócio)
+                        
+                        REMOVIDAS (agora possuem testes adequados):
+                        - config/** → OllamaConfigTest (@Rickelme), RabbitMQConfigTest (@Guilherme),
+                                      OpenApiConfigTest
+                        - infrastructure/messaging/** → GamificationEventPublisherTest (@Rickelme),
+                                                        GamificationEventConsumerTest (@Guilherme)
+                        - dto/** → StudentDTOTest, CourseCompletionRequestDTOTest
+                        - GlobalExceptionHandler → GlobalExceptionHandlerTest (@Rickelme)
+                        - RecommendationController → RecommendationControllerTest (@Guilherme)
+                        - StudentController → StudentControllerTest
+                        - CourseRecommendationService → CourseRecommendationServiceTest (@Rickelme)
+                        - StudentService → StudentServiceTest
+                        - CreditStrategyFactory$StrategyType → CreditStrategyFactoryTest
+                        - domain/event/** → CourseCompletedEventTest (@Guilherme)
+                        - CertificateHash → CertificateHashTest (@Rickelme, @Guilherme)
+                        
+                        NOTA SOBRE BDD:
+                        - bdd/** NÃO é excluído porque não é código de produção (está em src/test)
+                    -->
                     <excludes>
+                        <!-- Classe de bootstrapping Spring Boot - não testável -->
                         <exclude>**/SubscriptionApplication.class</exclude>
-                        <exclude>**/config/**</exclude>
-                        <exclude>**/dto/**</exclude>
-                        <exclude>**/bdd/**</exclude>
-                        <exclude>**/presentation/controller/GlobalExceptionHandler.class</exclude>
-                        <exclude>**/presentation/controller/RecommendationController.class</exclude>
-                        <exclude>**/presentation/controller/RecommendationController$*.class</exclude>
-                        <exclude>**/application/service/CourseRecommendationService.class</exclude>
-                        <exclude>**/domain/strategy/CreditStrategyFactory$StrategyType.class</exclude>
-                        <exclude>**/domain/event/**</exclude>
-                        <exclude>**/infrastructure/messaging/**</exclude>
                     </excludes>
                 </configuration>
                 <executions>
