--- a/src/main/resources/application-staging.properties
+++ b/src/main/resources/application-staging.properties
@@ -39,3 +39,17 @@ spring.h2.console.enabled=false
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
 
+# ===============================
+# RABBITMQ (Staging)
+# ===============================
+spring.rabbitmq.host=${SPRING_RABBITMQ_HOST:rabbitmq}
+spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME:guest}
+spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD:guest}
+
+# ===============================
+# OLLAMA (Disabled in Staging - uses mock)
+# ===============================
+# Ollama não está disponível em staging, então usamos mock
+ollama.enabled=false
+
