--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,6 +58,9 @@ management.health.defaults.enabled=true
 # Certifique-se de que: 1) Ollama está rodando (ollama serve)
 #                       2) Modelo foi baixado (ollama pull deepseek-coder:6.7b)
 
+# Habilitar/desabilitar Ollama (false = usa mock)
+ollama.enabled=true
+
 # URL do servidor Ollama (padrão: localhost:11434)
 ollama.base-url=http://localhost:11434
 
