--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -31,3 +31,16 @@ logging.level.org.hibernate.SQL=WARN
 # H2 CONSOLE (Disabled in tests)
 # ===============================
 spring.h2.console.enabled=false
+
+# ===============================
+# OLLAMA (Disabled in tests - uses mock)
+# ===============================
+ollama.enabled=false
+
+# ===============================
+# RABBITMQ (Embedded for tests)
+# ===============================
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
